WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305162
REGRESSION(
304746@main
): Triggers assertions in storage/websql/test-authorizer.html
https://bugs.webkit.org/show_bug.cgi?id=305162
Summary
REGRESSION(304746@main): Triggers assertions in storage/websql/test-authorize...
Jonathan Bedard
Reported
2026-01-08 16:23:09 PST
After
304746@main
, storage/websql/test-authorizer.html consistently hits assertions on WebKitLegacy Debug builds. History:
https://results.webkit.org/?suite=layout-tests&test=storage%2Fwebsql%2Ftest-authorizer.html
CI link:
https://build.webkit.org/#/builders/1709/builds/806
Reproduction: run-webkit-tests --no-build --no-retry --no-show-results --exit-after-n-failures=1 --iterations=30 -1 --debug storage/websql/test-authorizer.html Stacktrace: 1 0x304482788 WTF::RefPtr<WebCore::SQLTransaction, WTF::RawPtrTraits<WebCore::SQLTransaction>, WTF::DefaultRefDerefTraits<WebCore::SQLTransaction>>::releaseNonNull() 2 0x30447e410 WebCore::SQLTransactionBackend::frontend() 3 0x30447e328 WebCore::SQLTransactionBackend::~SQLTransactionBackend() 4 0x304478f80 WebCore::SQLTransactionBackend::~SQLTransactionBackend() 5 0x304478ed4 WebCore::SQLTransaction::~SQLTransaction() 6 0x3044790c8 WebCore::SQLTransaction::~SQLTransaction() 7 0x3044790f4 WebCore::SQLTransaction::~SQLTransaction() 8 0x302655af4 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::SQLTransaction, (WTF::DestructionThread)0>() const::'lambda'()::operator()() const 9 0x302655990 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::SQLTransaction, (WTF::DestructionThread)0>() const 10 0x302655794 WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<WebCore::SQLTransaction, (WTF::DestructionThread)0>::deref() const 11 0x302655658 WTF::DefaultRefDerefTraits<WebCore::SQLTransaction>::derefIfNotNull(WebCore::SQLTransaction*) 12 0x3026555f0 WTF::Ref<WebCore::SQLTransaction, WTF::RawPtrTraits<WebCore::SQLTransaction>, WTF::DefaultRefDerefTraits<WebCore::SQLTransaction>>::~Ref() 13 0x3025a5830 WTF::Ref<WebCore::SQLTransaction, WTF::RawPtrTraits<WebCore::SQLTransaction>, WTF::DefaultRefDerefTraits<WebCore::SQLTransaction>>::~Ref() 14 0x3044285d0 WebCore::Database::performClose() 15 0x30443332c WebCore::DatabaseThread::databaseThread() 16 0x304459440 WebCore::DatabaseThread::start()::$_0::operator()() const 17 0x304459228 WTF::Detail::CallableWrapper<WebCore::DatabaseThread::start()::$_0, void>::call() 18 0x1151a3ee4 WTF::Function<void ()>::operator()() const 19 0x1153243ac WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) 20 0x115333a64 WTF::wtfThreadEntryPoint(void*) 21 0x188f08c08 _pthread_start 22 0x188f03ba8 thread_start
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-08 16:23:21 PST
<
rdar://problem/167805769
>
Jonathan Bedard
Comment 2
2026-01-08 16:37:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56296
EWS
Comment 3
2026-01-08 16:47:26 PST
Test gardening commit
305320@main
(38871cd4cfbb): <
https://commits.webkit.org/305320@main
> Reviewed commits have been landed. Closing PR #56296 and removing active labels.
Anne van Kesteren
Comment 4
2026-01-08 23:50:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56317
EWS
Comment 5
2026-01-09 03:51:55 PST
Committed
305349@main
(9dae79ce6196): <
https://commits.webkit.org/305349@main
> Reviewed commits have been landed. Closing PR #56317 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug