REGRESSION(304746@main): Triggers assertions in storage/websql/test-authorizer.html https://bugs.webkit.org/show_bug.cgi?id=305162 rdar://167805769

Reviewed by Chris Dumez.

Now that m_frontend is a ThreadSafeWeakPtr it can have disappeared by
the time we destruct its owner.

Canonical link: https://commits.webkit.org/305349@main